--- a/thankyou.html
+++ b/thankyou.html
@@ -30,11 +30,7 @@
         <nav class="navbar">
             <div id="close-navbar" class="fas fa-times"></div>
             <a href="index.html" target="_blank">WEBSITE</a>
-            <a href="#home">HOME</a>
-            <a href="#about">OVER ONS</a>
-            <a href="#products">PRODUCTEN</a>
-            <a href="#review">REVIEWS</a>
-            <a href="#contact">CONTACT</a>
+            <a href="Contact.html">CONTACT</a>
 
         </nav>
 
