--- a/thankyou.html
+++ b/thankyou.html
@@ -30,6 +30,10 @@
         <nav class="navbar">
             <div id="close-navbar" class="fas fa-times"></div>
             <a href="index.html" target="_blank">WEBSITE</a>
+            <a href="index.html">HOME</a>
+            <a href="index.html">OVER ONS</a>
+            <a href="Webshop.php">PRODUCTEN</a>
+            <a href="Webshop.php">REVIEWS</a>
             <a href="Contact.html">CONTACT</a>
 
         </nav>
